<resources>
    <string name="app_name"><![CDATA[遥控之星 SDK]]></string>
    <string name="str_splash_info">数据加载中,请稍等</string>
    <string name="str_menu_tv">看电视</string>
    <string name="str_menu_user">用户数据</string>
    <string name="str_menu_user_login">用户登录</string>
    <string name="str_menu_user_import">导入配置</string>
    <string name="str_menu_user_export">导出配置</string>
    <string name="str_menu_control">设置</string>
    <string name="str_menu_more">更多</string>
    <string name="str_menu_control_add_group">添加场景</string>
    <string name="str_menu_control_add_device">添加设备</string>
    <string name="str_menu_control_io">端口选择</string>
    <string name="str_menu_control_dir">方向设定</string>
    <string name="str_menu_control_update">检测更新</string>
    <string name="str_menu_control_exit">退出系统</string>
    <string name="str_menu_control_help">使用说明</string>
    <string name="str_menu_control_edit">编辑</string>
    <string name="str_menu_control_look">监控</string>
    <string name="str_menu_control_study">长按界面按键进入学习模式</string>
    <string name="str_menu_control_about">关于</string>
    <string name="str_menu_info_rq">二维码名片</string>
    <string name="str_menu_control_wifi_lan">直连模式</string>
    <string name="str_menu_control_wifi_wan">外网模式</string>
    <string name="str_menu_device_del">删除设备</string>
    <string name="str_menu_group_del">删除场景</string>
    <string name="str_menu_device_rename">重命名</string>
    <string name="str_menu_group_rename">重命名</string>
    <string name="str_menu_wifi_longclick_del">删除设备</string>
    <string name="str_menu_watchtv_longclick_edit">编辑</string>
    <string name="str_watchtv_ok">是否后发送ok键</string>
    <string name="str_watchtv_select"><![CDATA[是否先发送-/--键]]></string>
    <string name="str_watchtv_did">绑定设备</string>
    <string name="str_watchtv_num">绑定频道号</string>
    <string name="str_watch_tv">看电视</string>
    <string name="str_study_info_1">按键一旦学习,之前键值将被更新,并且不可回退,是否继续?</string>
    <string name="str_other_yes">是</string>
    <string name="str_other_no">否</string>
    <string name="str_image">图片</string>
    <string name="str_text">文字</string>
    <string name="str_info">信息</string>
    <string name="str_name">名称</string>
    <string name="str_old_study_send">学习测试</string>
    <string name="str_old_known_send">已知码发送</string>
    <string name="str_new_study">学习</string>
    <string name="str_start_study">开始学习</string>
    <string name="str_new_study_send">学习测试</string>
    <string name="str_new_v4_send">新版4.4发送</string>
    <string name="str_old_study_result">旧版学习结果</string>
    <string name="str_new_study_result">新版学习结果</string>
    <string name="str_bt_search">搜索蓝牙</string>
        <string name="str_setting_finish">正在进行连接....</string>
    <string name="str_bt_loading">正在搜索蓝牙设备中</string>
    <string name="str_wifi_ssid">请从下面列表选择家中路由器的SSID</string>
    <string name="str_wifi_lan">请将手机wifi与所购买的wifi产品进行连接</string>
    <string name="str_wifi_pass">请输入家中路由器的密码</string>
    <string name="str_wifi_id">请输入或扫描所购买的产品</string>
    <string name="str_wifi_ip">输入服务器ip地址</string>
    <string name="str_wifi_info">请开启WIFI,连接到家中路由器</string>
    <string name="str_wifi_link_info">请点击添加设备进行连接</string>
    <string name="str_ip_get">获取地址</string>
    <string name="str_wifi_port">请输入服务器程序端口号</string>
    <string name="str_uid">设备ID:</string>
    <string name="str_show_pass">显示密码</string>
    <string name="str_show_wifi_err">请先按reset键进行初始化，再次尝试配置设备</string>
    <string name="str_scan">扫一下</string>
    <string name="str_error_no_key">目前该键尚无键值请点击 "编辑" 进入学习模式指定键值</string>
    <string name="str_error_open_usb">尚未检测到USB设备,请确认设备是否正确连接</string>
    <string name="str_error_open_device">尚未连接到设备,请确认设备是否已经正常开启</string>
    <string name="str_success_open_device">已经连接到设备,感谢您对本公司的支持</string>
    <string name="str_group_context">个遥控器</string>
    <string name="str_wizards_info">现在您可设置您的手机以便其控制您的电视, 机顶盒, 投影机, 空调和其他电子设备</string>
    <string name="str_button_wizards">继续</string>
    <string name="str_wizards_info_1">请在下面选择您需要的设备类型</string>
    <string name="str_wizards_info_2">(1)选择下列品牌直接进入码库匹配</string>
    <string name="str_wizards_info_2_1">(2)型号匹配</string>
    <string name="str_wizards_info_2_2">(3) 智能学习</string>
    <string name="str_wizards_info_2_3">(1)码库匹配</string>
    <string name="str_wizards_info_2_4">DIY 学习</string>
    <string name="str_wizards_info_2_5">(4) 一键匹配</string>
    <string name="str_one2two">请在下面选择一种匹配方法</string>
    <string name="str_wizards_info_3">请在下面直接选择电器型号</string>
    <string name="str_wizards_info_4">轻敲下方按钮,并观看您的电器是否做出正确响应,如果下方按键不是开关键请将电器处于开机状态</string>
    <string name="str_wizards_info_4_1">您的电器是否做出正确响应?</string>
    <string name="str_wizards_info_4_2">轻敲下方按钮,并观看您的电器是否全部做出正确响应?</string>
    <string name="str_wizards_info_5">点击开始学习按钮后，请根据提示按下相应遥控器上的按键</string>
    <string name="str_wizards_info_5_1">当按键变成灰色，找到遥控器上相应按键，并按下此键进行学习，学习完成，系统会自动进行下一个键的学习，直到所有按键学完。</string>
    <string name="str_wizards_info_5_2">当按键变成灰色，你有20S时间，找到遥控器上相应按键，并按下此键进行学习，学习完成，系统会自动进行下一个键的学习，直到所有按键学完。</string>
    <string name="str_wizards_type_finish">一个崭新的遥控器即将诞生, 希望它能改变你的生活, 陪伴您开心度过每一天, 请给你的设备起个名字吧!</string>
    <string name="str_wizards_info_9">轻敲下方按钮后,设备处于接受状态,将手中原始遥控器对准设备后,按下遥控器上的按键,系统会自动找到最匹配的遥控器</string>
    <string name="str_scan_info">将二维码放入框内, 即可自动扫描</string>
    <string name="str_open_ok">打开设备成功</string>
    <string name="str_open_err">打开设备失败</string>
    <string name="str_group">场景</string>
    <string name="str_group_add">场景选择</string>
    <string name="str_wizards">设备向导</string>
    <string name="str_down">否, 下一组</string>
    <string name="str_again">再次发送该代码</string>
    <string name="str_yes">是, 下一步</string>
    <string name="str_no">否</string>
    <string name="str_no_back">否,选择另一组</string>
    <string name="str_diy">DIY遥控器</string>
    <string name="str_four_no">否, 上一步</string>
    <string name="str_add_button">添加按键</string>
    <string name="str_four_yes">是, 存为遥控器</string>
    <string name="str_info_yes">我知道了</string>
    <string name="str_info_no">下次提醒</string>
    <string name="str_buy_yes">去逛逛</string>
    <string name="str_buy_no">已经购买了</string>
    <string name="str_edit_yes">是,去绑定</string>
    <string name="str_edit_no">否,下次再说</string>
    <string name="str_home">首页</string>
    <string name="str_watch">看电视</string>
    <string name="str_start">开始</string>
    <string name="str_more">更多</string>
    <string name="str_caoma">一个个添加过慢，请与我公司取得联系，寻求更快的解决方案</string>
    <string name="str_rq">扫一下二维码,轻松下载软件,亲等你哦</string>
    <string name="ble_not_supported">当前系统不支持BLE设备</string>
        <string name="usb_not_supported">当前系统不支持USB设备</string>
    <string name="error_bluetooth_not_supported">当前系统蓝牙不可用</string>
    <string name="unknown_device">未知设备</string>
    <string name="unknown_service">未知服务器</string>
    <string name="str_fragment_top_button_add">添加按键</string>
    <string name="str_up">按多了, 上一组</string>
    <string name="str_fragment_more_dir">方向设定</string>
    <string name="str_fragment_more_com">通讯选择</string>
    <string name="str_com_select">端口选择</string>
    <string name="str_bt">HXD1282</string>
    <string name="str_ble">HXD1286</string>
    <string name="str_wifi">HXD2282(外网)</string>
    <string name="str_wifi_ex">HXD2282(内网)</string>
    <string name="str_io">HXD019</string>
    <string name="str_usb">HXD3288</string>
    <string name="str_sound">HXD3688</string>
    <string name="str_fragment_more_setting">高级设置</string>
    <string name="str_fragment_more_check_update">检测更新</string>
    <string name="str_fragment_more_help">帮助文档</string>
    <string name="str_fragment_more_about">关于产品</string>
    <string name="str_fragment_bt_search">搜索蓝牙</string>
    <string name="str_fragment_group_bedroom">卧室</string>
    <string name="str_fragment_group_livingroom">客厅</string>
    <string name="str_fragment_group_offic">办公室</string>
    <string name="str_fragment_group_meeting">会议室</string>
    <string name="str_fragment_group_cookroom">厨房</string>
    <string name="str_fragment_group_diningroom">餐厅</string>
    <string name="str_fragment_group_washroom">浴室</string>
    <string name="str_fragment_step_one">选择</string>
    <string name="str_study_finish">学习完成</string>
    <string name="str_study_test">测试数据</string>
    <string name="str_study_repeat">重新学习</string>
    <string name="str_study_save">保存数据</string>
    <string name="str_update">软件更新</string>
    <string name="str_update_1">"当前版本:"</string>
    <string name="str_update_2">"发现新版本:"</string>
    <string name="str_update_3">"更新内容:"</string>
    <string name="str_update_4">"是否更新?"</string>
    <string name="str_update_5">"当前系统已经是最新版本"</string>
    <string name="str_downloading">正在下载中</string>
    <string name="str_waiting">请稍等</string>
    <string name="str_download_finish">下载完成</string>
    <string name="str_download_info">是否立即安装</string>
    <string name="str_fragment_step_study_one_new">学习新设备</string>
    <string name="str_fragment_step_study_one_repeat">重新学习设备</string>
    <string name="str_fragment_step_study_text_alert">当前学习数据是否保存</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="str_fragment_group_start_info">
<![CDATA[
		在这里面请选择你想要打开那个房间场景按键,如果没有你想要打开场景按键,请选定添加场景按键.
	]]>
    </string>
    <string name="str_fragment_device_start_info">
<![CDATA[
		请选择添加设备按键,要返回请按返回键.
	]]>
    </string>
    <string name="str_study_start_info_1">
<![CDATA[
		关闭提示对话框后, 点击要学的按键, 进入学习状态
	]]>
    </string>
    <string name="str_study_start_info_2">
<![CDATA[
		长按按键, 进入学习状态
	]]>
    </string>
    <string name="str_study_start_info_3">
<![CDATA[
		长按电视台图标进入编辑状态 
	]]>
    </string>
    <string name="str_study_start_info_4">
<![CDATA[
		你可以触摸边框左右滑动,更多惊喜等待你的发掘.
	]]>
    </string>
    <string name="str_study_start_info_5">
<![CDATA[
		长按按键将它移动到一个你喜欢的位置.移动到左右边缘可以将它丢弃.
	]]>
    </string>
    <string name="str_study_start_info_6">
<![CDATA[
		感谢对我公司产品的关注,你是否有意向购买相应产品.
	]]>
    </string>
    <string name="str_study_start_info_7">
<![CDATA[
		请先长按按键进行编辑.
	]]>
    </string>
    <string name="str_study_start_info_8">
<![CDATA[
		当前电视台还没有绑定遥控器,是否去绑定
	]]>
    </string>
    <string name="str_num_0">0</string>
    <string name="str_num_1">1</string>
    <string name="str_num_2">2</string>
    <string name="str_num_3">3</string>
    <string name="str_num_4">4</string>
    <string name="str_num_5">5</string>
    <string name="str_num_6">6</string>
    <string name="str_num_7">7</string>
    <string name="str_num_8">8</string>
    <string name="str_num_9">9</string>
    <string name="str_letter_a">A</string>
    <string name="str_letter_b">B</string>
    <string name="str_letter_c">C</string>
    <string name="str_letter_d">D</string>
    <string name="str_media_brightness_in">变亮</string>
    <string name="str_media_brightness_out">变暗</string>
    <string name="str_other_power_all_on">全开</string>
    <string name="str_other_power_all_off">全关</string>
    <string name="str_other_power_on">开</string>
    <string name="str_other_power_off">关</string>
    <string name="str_other_000">000</string>
    <string name="str_other_123">123</string>
    <string name="str_other_ok">OK</string>
    <string name="str_other_select"><![CDATA[-/--]]></string>
    <string name="str_other_study">学习</string>
    <string name="str_other_lost">防盗</string>
    <string name="str_other_set">设置</string>
    <string name="str_other_timer_1">定时1</string>
    <string name="str_other_timer_2">定时2</string>
    <string name="str_other_timer_3">定时3</string>
    <string name="str_other_timer_4">定时4</string>
</resources>