<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_user"
        android:title="@string/str_menu_user">
        <menu>
            <item
                android:id="@+id/menu_user_login"
                android:title="@string/str_menu_user_login"/>
            <item
                android:id="@+id/menu_user_import"
                android:title="@string/str_menu_user_import"/>
            <item
                android:id="@+id/menu_user_export"
                android:title="@string/str_menu_user_export"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_tv"
        android:title="@string/str_menu_tv">
        <menu>
        </menu>
    </item>
    <item
        android:id="@+id/menu_control"
        android:title="@string/str_menu_control">
        <menu>
            <item
                android:id="@+id/menu_control_add_group"
                android:title="@string/str_menu_control_add_group"/>
            <item
                android:id="@+id/menu_control_io"
                android:title="@string/str_menu_control_io"/>
            <item
                android:id="@+id/menu_control_dir"
                android:title="@string/str_menu_control_dir"/>
            <item
                android:id="@+id/menu_control_about"
                android:title="@string/str_menu_control_about"/>
        </menu>
    </item>

</menu>