<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
                android:background="#eee"
    android:scrollbarStyle="outsideOverlay" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="1dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="75dp"
                                  android:layout_height="match_parent"
            android:background="@drawable/bg_double"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_light_power_all_on"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginBottom="100dip"

                android:clickable="true"
                android:gravity="center"
                android:text="@string/str_other_power_all_on"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_light_power_all_off"
                android:layout_width="75dp"
                android:layout_height="75dp"

                android:clickable="true"
                android:gravity="center"
                android:text="@string/str_other_power_all_off"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_light_set"
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:clickable="true"
                android:gravity="center"
                android:text="@string/str_other_set"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
                                  android:layout_height="match_parent"
            android:background="@drawable/bg_double"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_light_power_on"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginBottom="100dip"
                
                android:clickable="true"
                android:gravity="center"
                android:text="@string/str_other_power_on"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_light_power_off"
                android:layout_width="75dp"
                android:layout_height="75dp"
                
                android:clickable="true"
                android:gravity="center"
                android:text="@string/str_other_power_off"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_light_brightness_add"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_media_brightness_in"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_light_brightness_sub"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_media_brightness_out"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_light_study"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_other_study"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_light_lost"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_other_lost"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_light_timer1"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_other_timer_1"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_light_timer2"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_other_timer_2"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_light_timer3"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_other_timer_3"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_light_timer4"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_other_timer_4"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_light_letter_a"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_letter_a"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_light_letter_b"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_letter_b"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_light_letter_c"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_letter_c"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_light_letter_d"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_letter_d"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_light_123"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_other_123"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>