<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarStyle="outsideOverlay" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="1dip" >

        <TextView
            android:id="@+id/textWizardsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
             android:textSize="18sp"
            android:layout_margin="2dp"
            android:text="@string/str_one2two" />

            <Button
                android:id="@+id/button_brand"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/ic_button_cast_selector"
                android:gravity="center"
                android:text="@string/str_wizards_info_2_1"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_study"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/ic_button_cast_selector"
                android:gravity="center"
                android:text="@string/str_wizards_info_2_2"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_fast"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/ic_button_cast_selector"
                android:gravity="center"
                android:text="@string/str_wizards_info_2_5"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_hand"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/ic_button_cast_selector"
                android:gravity="center"
                android:text="@string/str_wizards_info_2_3"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_diy"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/ic_button_cast_selector"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/str_wizards_info_2_4"
                android:textSize="14sp" />

    </LinearLayout>

</ScrollView>